--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -550,8 +550,8 @@ La velocit\'a di accrescimento \'e determinata dalla velocit\'a di contrazione d
 
 \section{Accrescimento limitato dalla disponibilit\'a di gas del disco}
 
-\begin{wrapfigure}[15]{l}{0.5\textwidth}
-	\includegraphics[trim={0cm 2cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{massenvvscore}
+\begin{wrapfigure}[20]{l}{0.45\textwidth}
+	\includegraphics[trim={2cm 2.5cm 2cm 0.1cm},clip, keepaspectratio,width=0.45\textwidth]{massenvvscore}
 	\caption{Accrescimento di gas in funzione del tempo: raggiunta massa critica del core solido si ha fase di accrescimento molto rapido (tratto quasi verticale in figura). Da \cite{alibert2005models}.}\label{fig:massenvvscore}
 \end{wrapfigure}
 
@@ -564,6 +564,7 @@ M_c^{crit}=10\mearth{}(\frac{\dot{M}_c}{\num{e-7}\mearth{}\si{\per\year}})\expy{
 con $q,s\approx0.2-0.3$ (\cite{ikoma2000formation}).
 
 Se $H\approx R_H$ il pianeta perturba in maniera non trascurabile il disco (il rate di accrescimento di gas \'e maggiore di quello fornito dal disco). Il raggio del pianeta \'e determinato dalle condizioni al bordo per materia accresciuta tramite free-fall da $R_H$ a $R_p$:
+\vspace{2cm}
 \begin{align}
 &\dot{M}_{XY}=\dot{M}_{XY,max},\ v_{ff}^2=2GM(\frac{1}{R}-\frac{1}{R_H})\\
 &P=P_{neb}+\frac{\dot{M}_{XY}}{4\pi r^2}v_{ff}+\frac{2g}{3\kappa},\ \tau=\max{(\rho_{neb}\kappa_{neb}R,2/3)}\\
@@ -621,8 +622,8 @@ fonti energia: tidal heating radiogeninc heat, star flux
 \chapter{Interazioni N-body tra embrioni planetari  e con il disco di gas}
 }
 
-\begin{wrapfigure}[10]{l}{0.5\textwidth}
-\includegraphics[trim={0cm 11cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{pdres}
+\begin{wrapfigure}[14]{l}{0.5\textwidth}
+\includegraphics[trim={14.5cm 11cm 11cm 0},clip, keepaspectratio,width=0.5\textwidth]{pdres}
 \caption{Simulazione evoluzione orbite planetarie in disco di accrescimento fino a cattura in risonanza $2:1$: le regioni pi\'u dense sono in rosso. Da \cite{kley2012planet}.}\label{fig:pdres}
 \end{wrapfigure}
 
@@ -632,7 +633,10 @@ L'osservazione di una sottopopolazione di esopianeti giganti su orbite strette, 
 
 Fenomeni che possono dar luogo a migrazione planetaria:
 \begin{itemize}
-\item Interazione con disco proto-planetario. Il potenziale periodico del pianeta perturba la densit\'a del gas: si ha scambio di momento angolare alle risonanze di Lindblad e alle orbite nella regione di corotazione.
+\item Interazione con disco proto-planetario.
+
+Il potenziale periodico del pianeta perturba la densit\'a del gas: si ha scambio di momento angolare alle risonanze di Lindblad e alle orbite nella regione di corotazione.
+
 %Considerando le perturbazioni lineari nella densit\'a del disco prodotte dal potenziale del pianeta si determina la risultante dei momenti torcenti $\Gamma$ dovuti alle risonanze di Lindblad e alla regione di corotazione.
 Velocit\'a e direzione della migrazione dipendono dalle caratteristiche del disco, massa del pianeta e moto relativo pianeta-gas.
 \item Interazione con disco residuo di planetesimi
