--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -36,20 +36,20 @@ Le popolazioni planetarie sintetiche sono costruite partendo dalla fase finale d
 \section{Modello di Berna}
 
 \begin{figure}[!ht]
-	\begin{subfigure}{0.5\textwidth}
-		\includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=0.99\textwidth]{initdistro}
+	\begin{subfigure}{0.48\textwidth}
+		\includegraphics[trim={0cm 10cm 0 0},clip, keepaspectratio,width=\textwidth]{initdistro}
 		\caption{Distribuzione caratteristiche dischi di accrescimento: metallicit\'a, massa del disco di accrescimento, massa della componente solida, frazione di stelle che mantengono disco di accrescimento in funzione dell'et\'a dell'ammasso. Da \cite{mordasini2018planetary}.}\label{fig:initdistro}
 	\end{subfigure}
-	\begin{subfigure}{0.5\textwidth}
-		\includegraphics[trim={9cm 5.5cm 10cm 0.5cm},clip, keepaspectratio, width=0.99\textwidth]{GFM}
+	\begin{subfigure}{0.48\textwidth}
+		\includegraphics[trim={9cm 5.5cm 10cm 0.5cm},clip, keepaspectratio, width=\textwidth]{GFM}
 		\caption{Schema dei processi che \'e necessario includere in un modello di formazione planetario coerente.
 			Da \cite{benz2014planet}.}\label{fig:GFM}
 	\end{subfigure}
 \end{figure}
 
 %\begin{wrapfigure}[22]{l}{0.7\textwidth}
-\begin{wrapfigure}[10]{l}{0.5\textwidth}
-	\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth,keepaspectratio]{giant-Zsynth}
+\begin{wrapfigure}[18]{l}{0.45\textwidth}
+	\includegraphics[trim={17.5cm 10cm 16.5cm 0},clip, width=0.45\textwidth,keepaspectratio]{giant-Zsynth}
 	\caption{Distribuzione di stelle che ospitano pianeti giganti ($M\geq300\mearth{}$) in funzione della metallicit\'a. Nero: popolazione sintetica. Blu: fit da osservazioni (\cite{mortier2013functional}). Da \cite{mordasini2018planetary}. }\label{fig:giant-Zsynth}
 \end{wrapfigure}
 
