--- a/pps-seminario.tex
+++ b/pps-seminario.tex
@@ -88,7 +88,7 @@
 %\newcommand{\titolo}{\@title}
 %\makeatother
 \author{ }
-\title{Simulazione popolazioni planetarie: risultati mordasini 18}
+\title{Simulazione popolazioni planetarie}
 \date{\today}
 %%%
 %\outputonly{1}% output in pdf only page number
