displeced distance distro

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -619,7 +619,7 @@ fonti energia: tidal heating radiogeninc heat, star flux
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 %\chapter{Evoluzione orbite proto-pianeti: migrazione planetaria (e N-body integrator: implementazione; la parte di teoria nella prima parte dei vincoli e l'implementazione dell'integratore nell seconda parte?).}
-\chapter{Interazioni N-body tra embrioni planetari  e con il disco di gas}
+\chapter{Interazioni tra embrioni planetari e con il disco di gas}
 }
 
 \begin{wrapfigure}[14]{l}{0.5\textwidth}
