--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -518,6 +518,19 @@ Considerando un numero totale di osservazioni $N_o$ durante il transito si hanno
 V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
 \end{equation}
 
+\begin{figure}[!ht]
+	\begin{subfigure}[b]{0.5\textwidth}
+		\centering
+		\includegraphics[trim={0cm 22cm 0 0},clip, width=0.95\textwidth,keepaspectratio]{freqvsRpl50d}
+		\caption{Distribuzione raggi planetari: crescita esponenziale verso piccoli raggi. La regione barrata indica misure incomplete. Da \cite{howard2012planet}.}\label{fig:howard2012planet}
+	\end{subfigure}
+	~
+	\begin{subfigure}[b]{0.5\textwidth} \centering
+		\includegraphics[trim={0cm 19cm 0 0},clip,width=0.95\textwidth,keepaspectratio]{freqperstarvsPanfit}
+		\caption{Distribuzione dei periodi orbitali raggruppate per diversi raggi planetari: indicato il diverso periodo critico a cui si ha drastica diminuzione nella distribuzione planetaria. Da \cite{howard2012planet}.}\label{fig:freqperstarvsPanfit}
+	\end{subfigure}
+\end{figure}
+
 Il grafico (\ref{fig:H12yield}) mostra i risultati del survey di ricerca di transiti attorno a stelle di tipo solare realizzato con satellite kepler: si nota un picco di densit\'a nella regione del diagramma P-R da $P\approx\SI{3}{\day}$, $R\approx2\rearth$ a $P\approx\SI{50}{\day}$, $R\approx4\rearth$.
 
 \begin{figure}[!ht]
@@ -525,6 +538,7 @@ Il grafico (\ref{fig:H12yield}) mostra i risultati del survey di ricerca di tran
 	\includegraphics[trim={0cm 3.5cm 0 0},clip,width=0.95\textwidth,keepaspectratio]{H12yield}
 	\caption{Frequenza pianeti osservati in funzione del raggio $R_p$ e del periodo $P$. In bianco per ogni cella \'e indicato: a sinistra in alto il numero di pianeti rivelati con SNR maggiore di una certa soglia scelta dagli autori del survey, in parentesi il valore corretto tenendo conto della probabilit\'a di transito; a sinjstra in basso il numero di stelle del survey per cui \'e possibile rivelazione del pianeta con caratteristiche medie della cella e con SNR superiore a soglia scelta; in basso a destra la frequenza di pianeti corretta per probabilit\'a di transito e bias incompletezza del survey; in alto a destra occorrenza planetaria per unit\'a di area logaritmica ($d\log{P}\,d\log{R_p}=28.5$ celle). Le misure nella regione tratteggiata per $R<2\rearth{}$ sono incomplete ed afflitte da errori sistematici. Da \cite{howard2012planet}.}\label{fig:H12yield}
 \end{figure}
+
 
 %Il grafico (\subref{fig:howard2012planet}) mostra distribuzione radiale corretta per probabilit\'a di transito, la distribuzione dei periodi \'e mostrata in figura (\subref{fig:freqperstarvsPanfit}): i pianeti sono raggruppati per intervalli di raggio.
 La frequenza dei pianeti in funzione del raggio decresce all'aumentare del raggio con andamento
@@ -542,19 +556,6 @@ La frequenza in funzione del periodo (figura \subref{fig:howard2012planet}) cres
 \end{aligned}
 \end{equation}
 Inoltre le costanti dipendo dal raggio planetario come mostrato in figura (\subref{fig:freqperstarvsPanfit}): si ipotizza che il diverso valore del raggio critico $P_0$ sia dovuto alla dipendenza dal raggio planetario del meccanismo di frenamento della migrazione.
-
-\begin{figure}[!ht]
-	\begin{subfigure}[b]{0.47\textwidth}
-		\centering
-		\includegraphics[trim={0cm 22cm 0 0},clip, width=0.95\textwidth,keepaspectratio]{freqvsRpl50d}
-		\caption{Distribuzione raggi planetari: crescita esponenziale verso piccoli raggi. La regione barrata indica misure incomplete. Da \cite{howard2012planet}.}\label{fig:howard2012planet}
-	\end{subfigure}
-	~
-	\begin{subfigure}[b]{0.5\textwidth} \centering
-		\includegraphics[trim={0cm 19cm 0 0},clip,width=0.95\textwidth,keepaspectratio]{freqperstarvsPanfit}
-		\caption{Distribuzione dei periodi orbitali raggruppate per diversi raggi planetari: indicato il diverso periodo critico a cui si ha drastica diminuzione nella distribuzione planetaria. Da \cite{howard2012planet}.}\label{fig:freqperstarvsPanfit}
-	\end{subfigure}
-\end{figure}
 
 \begin{workout}[Probabilit\'a rivelazione pianeti con orbite eccentriche e durata transito]
 	La maggiore probabilit\'a di transito per orbite eccentriche \'e compensata approssimativamente dalla minore probabilit\'a di rilevamento per la minor durata del transito.
@@ -649,6 +650,8 @@ Are planetary systems filled to capacity? (Fang Nargot 13)
 	\item ...
 \end{itemize}
 \end{workout}
+
+\clearpage
 
 \section{Struttura planetaria: massa, composizione, effetto della radiazione stellare}
 
